Changelog 0.6-beta, 05.01.11, revision 161
------------------------------------------------------------------------------

- Implemented #7: Delete document method is required.
  # Thanks to Flyingmana for the patch
- Implemented #12: fetchById does not check the type
  # Thanks to PHPGangsta for the patch
- Implemented #13: Using include_docs parameter is not possible
- Implemented: Support for reduce parameter
- Fixed #9: Incorrect base64 encoding in import/export-tool
- Added: Bootstrap file setting up PHPillow autoload mechanism
- Added: Working simple example for storing and updating documents in a DB
- Documented: Behaviour of response classes

Changelog 0.5-alpha, 09.08.09, revision 136
------------------------------------------------------------------------------

- Implemented: View base class, which allows to store map and reduce functions
  in external files
- Implemented: couchdb-python compatible couchdb-dump utility
- Implemented: couchdb-python compatible couchdb-load utility
- Implemented: Action to prime all caches in a database
- Fixed: Connection error to exception conversion in custom connection
  handler.
- Documented: tutorial now reflects the new API

Changelog 0.4-alpha, 10.07.09, revision 106
------------------------------------------------------------------------------

- Implemented #5: Add support for username/password

Changelog 0.3-alpha, 24.03.09, revision 100
------------------------------------------------------------------------------

- Implemented: Support PHP 5.2
- Implemented: Support for HTTP-Redirects. They only work on the same server,
  which should be OK, especially for CouchDB.
- Implemented: BC handling for old CouchDB view paramters introduced using new
  view parameter names. Breaks support for CouchDB 0.8.1, since trunk and and
  0.8.1 are API incompatible now.
- Implemented: __isset() for phpillow documents
- Implemented: Indexable date validator
- Implemented: Float number validator